--- a/service.css
+++ b/service.css
@@ -1,6 +1,6 @@
 #service-section {
     margin-top: 100px;
-    height: 400px;
+    /* height: 400px; */
     height: auto;
 }
 
@@ -22,6 +22,7 @@
 .hotel-service {
     display: flex;
     margin-top: 70px;
+    padding: 10px;
 }
 
 .service-item {
