--- a/rooms.css
+++ b/rooms.css
@@ -70,3 +70,13 @@
     border: 1px solid rgb(90, 85, 85);
     padding: 8px;
 }
+
+@media only screen and (max-width:320px) {
+    .room-topic h2 {
+        font-size: 30px;
+    }
+    .room-feature {
+        display: flex;
+        flex-direction: column;
+    }
+}
