--- a/Resto.css
+++ b/Resto.css
@@ -47,3 +47,17 @@
     font-size: 18px;
     color: #c5a880;
 }
+
+@media only screen and (max-width:320px) {
+    .resto-content {
+        display: flex;
+        flex-direction: column;
+    }
+    .resto-items {
+        display: flex;
+        flex-direction: column;
+    }
+    .Bars-item span {
+        font-size: 13px;
+    }
+}
