--- a/Resto.css
+++ b/Resto.css
@@ -61,3 +61,17 @@
         font-size: 13px;
     }
 }
+
+@media only screen and (min-width:321px) and (max-width:480px) {
+    .resto-content {
+        display: flex;
+        flex-direction: column;
+    }
+    .resto-items {
+        display: flex;
+        flex-direction: column;
+    }
+    .Bars-item span {
+        font-size: 25px;
+    }
+}
