--- a/hotelGuest.css
+++ b/hotelGuest.css
@@ -58,3 +58,9 @@
         flex-direction: column;
     }
 }
+
+@media only screen and (min-width:321px) and (max-width:480px) {
+    .guest-content {
+        grid-template-columns: 1fr;
+    }
+}
