--- a/outdoor.css
+++ b/outdoor.css
@@ -1,6 +1,5 @@
 #outdoor-section {
     margin-top: 60px;
-    /* height: 500px; */
     height: auto;
 }
 
@@ -21,5 +20,12 @@
     .outdoor-gallery {
         display: flex;
         flex-direction: column;
+    }
+}
+
+@media only screen and (min-width:321px) and (max-width:480px) {
+    .outdoor-gallery {
+        grid-template-columns: 1fr;
+        grid-row-gap: 6px;
     }
 }
