--- a/Resto.css
+++ b/Resto.css
@@ -75,3 +75,9 @@
         font-size: 25px;
     }
 }
+
+@media only screen and (min-width:481px) and (max-width:790px) {
+    .resto-content {
+        grid-template-columns: 1fr;
+    }
+}
