--- a/about.css
+++ b/about.css
@@ -107,3 +107,23 @@
         font-size: 43px;
     }
 }
+
+@media only screen and (min-width:481px) and (max-width:790px) {
+    .about-title {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-items {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media only screen and (min-width:791px) and (max-width:1024px) {
+    .about-title {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-booking-card h2 {
+        width: auto;
+    }
+}
