--- a/interBook.css
+++ b/interBook.css
@@ -65,3 +65,12 @@
         width: 268px;
     }
 }
+
+@media only screen and (min-width:481px) and (max-width:790px) {
+    .intermediate-booking {
+        flex-direction: column;
+    }
+    .intermediate-content h2 {
+        font-size: 1.6rem;
+    }
+}
