--- a/outdoor.css
+++ b/outdoor.css
@@ -29,3 +29,17 @@
         grid-row-gap: 6px;
     }
 }
+
+@media only screen and (min-width:481px) and (max-width:790px) {
+    .outdoor-gallery {
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 10px;
+    }
+}
+
+@media only screen and (min-width:790px) and (max-width:1024px) {
+    .outdoor-gallery {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-row-gap: 10px;
+    }
+}
