--- a/rooms.css
+++ b/rooms.css
@@ -87,3 +87,9 @@
         flex-direction: column;
     }
 }
+
+@media only screen and (min-width:481px) and (max-width:790px) {
+    .room-feature {
+        grid-template-columns: 1fr 1fr;
+    }
+}
