--- a/service.css
+++ b/service.css
@@ -50,3 +50,27 @@
         margin: 5px 0px 0px 0px;
     }
 }
+
+@media only screen and (min-width:481px) and (max-width:790px) {
+    .hotel-service {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 10px;
+    }
+    .service-item {
+        border-radius: 0px;
+        margin: 5px 0px 0px 0px;
+    }
+}
+
+@media only screen and (min-width:791px) and (max-width:1024px) {
+    .hotel-service {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-column-gap: 10px;
+    }
+    .service-item {
+        border-radius: 0px;
+        margin: 5px 0px 0px 0px;
+    }
+}
