--- a/hotelBlog.css
+++ b/hotelBlog.css
@@ -48,18 +48,12 @@
         display: flex;
         flex-direction: column;
     }
-    .blog-card-details {
-        display: block;
-    }
 }
 
 @media only screen and (min-width:321px) and (max-width:480px) {
     .blog-content {
         display: flex;
         flex-direction: column;
-    }
-    .blog-card-details {
-        display: block;
     }
 }
 
@@ -74,5 +68,11 @@
     .blog-content {
         grid-template-columns: 1fr 1fr 1fr;
         grid-row-gap: 10px;
+    }
+}
+
+@media only screen and (max-width:1220px) {
+    .blog-card-details {
+        display: block;
     }
 }
